{
  "version": 4,
  "terraform_version": "1.3.1",
  "serial": 61,
  "lineage": "162e46b9-0701-0f20-2727-f60f9815079f",
  "resources": [
    {
      "module": "module.alb1",
      "mode": "managed",
      "type": "aws_lb",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:156864767418:loadbalancer/app/lb2/38b589fbc7010f53",
            "arn_suffix": "app/lb2/38b589fbc7010f53",
            "desync_mitigation_mode": "defensive",
            "dns_name": "lb2-685460385.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:156864767418:loadbalancer/app/lb2/38b589fbc7010f53",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "lb2",
            "preserve_host_header": false,
            "security_groups": [
              "sg-052a68b5d5cf80196"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-094e73a81409da4f4"
              },
              {
                "subnet_id": "subnet-0a4dcc03f7226e5e6"
              }
            ],
            "subnets": [
              "subnet-094e73a81409da4f4",
              "subnet-0a4dcc03f7226e5e6"
            ],
            "vpc_id": "vpc-08c122fd51b64ee05",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.my_vpc.aws_security_group.sg1",
            "module.my_vpc.aws_subnet.main",
            "module.my_vpc.aws_subnet.public",
            "module.my_vpc.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.alb1",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:156864767418:listener/app/lb2/38b589fbc7010f53/e35473fdd89f1c04",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:156864767418:targetgroup/alb-target1/b02053d2e08724a4",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:156864767418:listener/app/lb2/38b589fbc7010f53/e35473fdd89f1c04",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:156864767418:loadbalancer/app/lb2/38b589fbc7010f53",
            "port": 8080,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb1.aws_lb.test",
            "module.alb1.aws_lb_target_group.test",
            "module.my_vpc.aws_security_group.sg1",
            "module.my_vpc.aws_subnet.main",
            "module.my_vpc.aws_subnet.public",
            "module.my_vpc.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.alb1",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:156864767418:targetgroup/alb-target1/b02053d2e08724a4",
            "arn_suffix": "targetgroup/alb-target1/b02053d2e08724a4",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:156864767418:targetgroup/alb-target1/b02053d2e08724a4",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "alb-target1",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-08c122fd51b64ee05"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.alb1",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "test1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:156864767418:targetgroup/alb-target1/b02053d2e08724a4-20221129064305787900000002",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:156864767418:targetgroup/alb-target1/b02053d2e08724a4",
            "target_id": "i-0d3f9c332bec8aa97"
          },
          "dependencies": [
            "module.alb1.aws_lb_target_group.test",
            "module.ec2.aws_instance.webserver1",
            "module.my_vpc.aws_subnet.main",
            "module.my_vpc.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.alb1",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "test2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:156864767418:targetgroup/alb-target1/b02053d2e08724a4-20221129064305466300000001",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:156864767418:targetgroup/alb-target1/b02053d2e08724a4",
            "target_id": "i-0174d16c35e520603"
          },
          "dependencies": [
            "module.alb1.aws_lb_target_group.test",
            "module.ec2.aws_instance.webserver2",
            "module.my_vpc.aws_subnet.public",
            "module.my_vpc.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b0dcb5067f052a63",
            "arn": "arn:aws:ec2:us-east-1:156864767418:instance/i-0d3f9c332bec8aa97",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d3f9c332bec8aa97",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "jenkinsKP",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0be53a965a0598791",
            "private_dns": "ip-10-0-1-153.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.153",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f24540ca906037ba",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a4dcc03f7226e5e6",
            "tags": {
              "Name": "webserver"
            },
            "tags_all": {
              "Name": "webserver"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a29e0d85cc62e81d"
            ]
          },
          "dependencies": [
            "module.my_vpc.aws_subnet.main",
            "module.my_vpc.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b0dcb5067f052a63",
            "arn": "arn:aws:ec2:us-east-1:156864767418:instance/i-0174d16c35e520603",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0174d16c35e520603",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "jenkinsKP",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0bb89c3d1bbf12022",
            "private_dns": "ip-10-0-2-104.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.104",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05d7e1bf84a5601b4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-094e73a81409da4f4",
            "tags": {
              "Name": "webserver2"
            },
            "tags_all": {
              "Name": "webserver2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a29e0d85cc62e81d"
            ]
          },
          "dependencies": [
            "module.my_vpc.aws_subnet.public",
            "module.my_vpc.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:156864767418:internet-gateway/igw-0402fa23ff69285ad",
            "id": "igw-0402fa23ff69285ad",
            "owner_id": "156864767418",
            "tags": {
              "Name": "ig"
            },
            "tags_all": {
              "Name": "ig"
            },
            "vpc_id": "vpc-08c122fd51b64ee05"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:156864767418:route-table/rtb-0b6c0d3a2a840d2ec",
            "id": "rtb-0b6c0d3a2a840d2ec",
            "owner_id": "156864767418",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0402fa23ff69285ad",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08c122fd51b64ee05"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_internet_gateway.gw",
            "module.my_vpc.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aebc853e55ebb5ef",
            "route_table_id": "rtb-0b6c0d3a2a840d2ec",
            "subnet_id": "subnet-0a4dcc03f7226e5e6"
          },
          "dependencies": [
            "module.my_vpc.aws_internet_gateway.gw",
            "module.my_vpc.aws_route_table.rt1",
            "module.my_vpc.aws_subnet.main",
            "module.my_vpc.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:156864767418:security-group/sg-052a68b5d5cf80196",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-052a68b5d5cf80196",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "TLS from VPC",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "156864767418",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08c122fd51b64ee05"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:156864767418:subnet/subnet-0a4dcc03f7226e5e6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a4dcc03f7226e5e6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "156864767418",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet1"
            },
            "tags_all": {
              "Name": "subnet1"
            },
            "vpc_id": "vpc-08c122fd51b64ee05"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:156864767418:subnet/subnet-094e73a81409da4f4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-094e73a81409da4f4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "156864767418",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet2"
            },
            "tags_all": {
              "Name": "subnet2"
            },
            "vpc_id": "vpc-08c122fd51b64ee05"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:156864767418:vpc/vpc-08c122fd51b64ee05",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-088c758f34367f8df",
            "default_route_table_id": "rtb-0ee952f8a6a2185fc",
            "default_security_group_id": "sg-0a29e0d85cc62e81d",
            "dhcp_options_id": "dopt-0e2ad1e3ea0ed6fda",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08c122fd51b64ee05",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ee952f8a6a2185fc",
            "owner_id": "156864767418",
            "tags": {
              "Name": "vpc1"
            },
            "tags_all": {
              "Name": "vpc1"
            }
          }
        }
      ]
    }
  ]
}